added a few more OpenData demos